--- a/preEntrega3/.env
+++ b/preEntrega3/.env
@@ -1,5 +1,7 @@
 PORT = 8082
 
+PERSISTENCE = MONGO
+
 MONGO_URI = 'mongodb+srv://santisauce:santisauce@integrador.1sndrvg.mongodb.net/?retryWrites=true&w=majority'
 
 JWT_PRIVATE_KEY = "KILNFSKNDIVMIMEIOI"
