--- a/entrega10/package.json
+++ b/entrega10/package.json
@@ -17,6 +17,7 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "express-handlebars": "^6.0.7",
     "express-partials": "^0.3.0",
     "express-session": "^1.17.3",
